CSS FIX: Ensure mode is visible on screen

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -22,13 +22,13 @@
 
 .button {
   width: 100px;        
-  height: 60px;        
+  height: 48px;        
   padding: 0;
   border: 2px solid #fff;
   border-radius: 12px;
   background-color: #000;
   color: #fff;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: bold;
   text-align: center;
   display: flex;
